update .yaml
